Small alignment fix in todos

--- a/examples/todos/style.css
+++ b/examples/todos/style.css
@@ -73,7 +73,7 @@ h1 {
 }
 #content {
   max-width: 496px;
-  padding: 13px 16px 0 0;
+  padding: 11px 16px 0 0;
 }
 #todos {
   list-style: none;
